# KernelSbom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  sbom.py
.devcontainer/: Dockerfile  devcontainer.json  extract_testdata.sh  post_create.sh  workspace.code-workspace
.github/workflows/: README.md  build-publish-devcontainer.yaml  build_and_publish_devcontainer.yaml  build_publish_devcontainer.yaml  ci.yaml  cmd-graph-based-kernel-build.yaml  cmd-graph-based-kernel-builds.yaml  cmd_graph_based_kernel_build.yaml  sbom.yaml  sbom_all_configs.yaml
analysis/: README.md  cmd_graph_based_kernel_build.py  cmd_graph_visualization.py
analysis/web/: index.html
docs/: index.rst
evaluation/: cmd_graph_based_kernel_build.py
kernel_sbom/: __init__.py  __main__.py  config.py
kernel_sbom/cmd_graph/: cmd_file.py  cmd_graph.py  cmd_graph_node.py  deps_parser.py  hardcoded_dependencies.py  incbin_parser.py  savedcmd_parser.py
kernel_sbom/spdx/: build.py  core.py  serialization.py  simplelicensing.py  software.py
kernel_sbom/spdx_graph/: build_spdx_graphs.py  kernel_file.py  shared_spdx_elements.py  spdx_build_graph.py  spdx_graph_model.py  spdx_output_graph.py  spdx_source_graph.py
sbom/: Makefile  README  module_roots.py  sbom.py
sbom_analysis/: .gitignore  README.md  cmd_graph_based_kernel_build.py  cmd_graph_visualization.py  module_roots.py
sbom_integration_tests/: test_sbom.py
src/: sbom.py
testdata_generation/: Dockerfile  README.md  extract_testdata.sh
tests/: __main__.py
(+141 files in other folders)
